// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots 2 - Watson IoT Experimental/☢️ ColorDropdown Custom Colors Example 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": "200px",
      }
    }
  >
    <div
      className="bx--dropdown__wrapper bx--list-box__wrapper"
      data-testid="color-dropdown"
      title="Select a color"
    >
      <label
        className="bx--label"
        htmlFor="downshift-0-toggle-button"
        id="downshift-0-label"
      >
        Color
      </label>
      <div
        className="bx--dropdown iot--color-dropdown bx--list-box"
        id="myColorDropdown"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        <button
          aria-controls="downshift-0-menu"
          aria-disabled={false}
          aria-expanded={false}
          aria-haspopup="listbox"
          aria-labelledby="downshift-0-label downshift-0-toggle-button"
          className="bx--list-box__field"
          disabled={false}
          id="downshift-0-toggle-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="combobox"
          title="Select a color"
          type="button"
        >
          <span
            className="bx--list-box__label"
          >
            Select a color
          </span>
          <div
            className="bx--list-box__menu-icon"
          >
            <svg
              aria-label="Open menu"
              fill="currentColor"
              focusable="false"
              height={16}
              name="chevron--down"
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
              <title>
                Open menu
              </title>
            </svg>
          </div>
        </button>
        <div
          aria-labelledby="downshift-0-label"
          className="bx--list-box__menu"
          id="downshift-0-menu"
          onBlur={[Function]}
          onKeyDown={[Function]}
          onMouseLeave={[Function]}
          role="listbox"
          tabIndex={-1}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 2 - Watson IoT Experimental/☢️ ColorDropdown Default Example 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": "200px",
      }
    }
  >
    <div
      className="bx--dropdown__wrapper bx--list-box__wrapper"
      data-testid="color-dropdown"
      title="Select a color"
    >
      <label
        className="bx--label"
        htmlFor="downshift-0-toggle-button"
        id="downshift-0-label"
      >
        Color
      </label>
      <div
        className="bx--dropdown iot--color-dropdown bx--list-box"
        id="myColorDropdown"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        <button
          aria-controls="downshift-0-menu"
          aria-disabled={false}
          aria-expanded={false}
          aria-haspopup="listbox"
          aria-labelledby="downshift-0-label downshift-0-toggle-button"
          className="bx--list-box__field"
          disabled={false}
          id="downshift-0-toggle-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="combobox"
          title="Select a color"
          type="button"
        >
          <span
            className="bx--list-box__label"
          >
            Select a color
          </span>
          <div
            className="bx--list-box__menu-icon"
          >
            <svg
              aria-label="Open menu"
              fill="currentColor"
              focusable="false"
              height={16}
              name="chevron--down"
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
              <title>
                Open menu
              </title>
            </svg>
          </div>
        </button>
        <div
          aria-labelledby="downshift-0-label"
          className="bx--list-box__menu"
          id="downshift-0-menu"
          onBlur={[Function]}
          onKeyDown={[Function]}
          onMouseLeave={[Function]}
          role="listbox"
          tabIndex={-1}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 2 - Watson IoT Experimental/☢️ ColorDropdown No Labels Example 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": "6rem",
      }
    }
  >
    <div
      className="bx--dropdown__wrapper bx--list-box__wrapper"
      data-testid="color-dropdown"
      title="Select a color"
    >
      <label
        className="bx--label"
        htmlFor="downshift-0-toggle-button"
        id="downshift-0-label"
      >
        Color
      </label>
      <div
        className="bx--dropdown iot--color-dropdown bx--list-box"
        id="myColorDropdown"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        <button
          aria-controls="downshift-0-menu"
          aria-disabled={false}
          aria-expanded={false}
          aria-haspopup="listbox"
          aria-labelledby="downshift-0-label downshift-0-toggle-button"
          className="bx--list-box__field"
          disabled={false}
          id="downshift-0-toggle-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="combobox"
          title="purple70"
          type="button"
        >
          <span
            className="bx--list-box__label"
          >
            <div
              className="iot--color-dropdown__item"
              title="purple70"
            >
              <div
                className="iot--color-dropdown__item-border"
              >
                <div
                  className="iot--color-dropdown__color-sample"
                  style={
                    Object {
                      "backgroundColor": "#6929c4",
                    }
                  }
                  title="#6929c4"
                />
              </div>
            </div>
          </span>
          <div
            className="bx--list-box__menu-icon"
          >
            <svg
              aria-label="Open menu"
              fill="currentColor"
              focusable="false"
              height={16}
              name="chevron--down"
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
              <title>
                Open menu
              </title>
            </svg>
          </div>
        </button>
        <div
          aria-labelledby="downshift-0-label"
          className="bx--list-box__menu"
          id="downshift-0-menu"
          onBlur={[Function]}
          onKeyDown={[Function]}
          onMouseLeave={[Function]}
          role="listbox"
          tabIndex={-1}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 2 - Watson IoT Experimental/☢️ ColorDropdown Preset Selection Example 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": "200px",
      }
    }
  >
    <div
      className="bx--dropdown__wrapper bx--list-box__wrapper"
      data-testid="color-dropdown"
      title="Select a color"
    >
      <label
        className="bx--label"
        htmlFor="downshift-0-toggle-button"
        id="downshift-0-label"
      >
        Color
      </label>
      <div
        className="bx--dropdown iot--color-dropdown bx--list-box"
        id="myColorDropdown"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        <button
          aria-controls="downshift-0-menu"
          aria-disabled={false}
          aria-expanded={false}
          aria-haspopup="listbox"
          aria-labelledby="downshift-0-label downshift-0-toggle-button"
          className="bx--list-box__field"
          disabled={false}
          id="downshift-0-toggle-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="combobox"
          title="teal70"
          type="button"
        >
          <span
            className="bx--list-box__label"
          >
            <div
              className="iot--color-dropdown__item"
              title="teal70"
            >
              <div
                className="iot--color-dropdown__item-border"
              >
                <div
                  className="iot--color-dropdown__color-sample"
                  style={
                    Object {
                      "backgroundColor": "#005d5d",
                    }
                  }
                  title="#005d5d"
                />
                <div
                  className="iot--color-dropdown__color-name"
                >
                  teal70
                </div>
              </div>
            </div>
          </span>
          <div
            className="bx--list-box__menu-icon"
          >
            <svg
              aria-label="Open menu"
              fill="currentColor"
              focusable="false"
              height={16}
              name="chevron--down"
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
              <title>
                Open menu
              </title>
            </svg>
          </div>
        </button>
        <div
          aria-labelledby="downshift-0-label"
          className="bx--list-box__menu"
          id="downshift-0-menu"
          onBlur={[Function]}
          onKeyDown={[Function]}
          onMouseLeave={[Function]}
          role="listbox"
          tabIndex={-1}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 2 - Watson IoT Experimental/☢️ ColorDropdown ️⚠️ Experimental Notice  1`] = `
<div
  className="storybook-container"
>
  <div
    className="bx--toast-notification bx--toast-notification--warning-alt"
    kind="warning-alt"
    role="alert"
    style={
      Object {
        "marginBottom": "0.5rem",
        "minWidth": "30rem",
      }
    }
  >
    <svg
      aria-hidden={true}
      className="bx--toast-notification__icon"
      fill="currentColor"
      focusable="false"
      height={20}
      preserveAspectRatio="xMidYMid meet"
      viewBox="0 0 32 32"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16,26a1.5,1.5,0,1,1,1.5-1.5A1.5,1.5,0,0,1,16,26Zm-1.125-5h2.25V12h-2.25Z"
        data-icon-path="inner-path"
        fill="none"
      />
      <path
        d="M16.002,6.1714h-.004L4.6487,27.9966,4.6506,28H27.3494l.0019-.0034ZM14.875,12h2.25v9h-2.25ZM16,26a1.5,1.5,0,1,1,1.5-1.5A1.5,1.5,0,0,1,16,26Z"
      />
      <path
        d="M29,30H3a1,1,0,0,1-.8872-1.4614l13-25a1,1,0,0,1,1.7744,0l13,25A1,1,0,0,1,29,30ZM4.6507,28H27.3493l.002-.0033L16.002,6.1714h-.004L4.6487,27.9967Z"
      />
      <title>
        warning-alt icon
      </title>
    </svg>
    <div
      className="bx--toast-notification__details"
    >
      <h3
        className="bx--toast-notification__title"
      >
        Experimental Component Notice
      </h3>
      <div
        className="bx--toast-notification__subtitle"
      >
        <span>
          ColorDropdown
           is an
           
          <a
            href="https://github.com/carbon-design-system/carbon-addons-iot-react/blob/next/packages/react/docs/guides/experimental-components.md"
          >
            experimental component
          </a>
           
          and may have changing APIs with no major version bump and/or insufficient test coverage. Use of this component in production is discouraged.
        </span>
      </div>
    </div>
  </div>
</div>
`;
